Sync_E-comm_to_Salesforce/force-app/main/default/objects/Stripe_Subscription__c/Stripe_Subscription__c.object-meta.xml
<CustomObject>
    <label>Stripe Subscription</label>
    <nameField>
        <label>Stripe Subscriptions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>