Sync_E-comm_to_Salesforce/force-app/main/default/objects/Stripe_Subscription__c/fields/Ended__c.field-meta.xml
<CustomField>
    <fullName>Ended__c</fullName>
    <label>Ended</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>