Sync_E-comm_to_Salesforce/force-app/main/default/objects/Stripe_Subscription__c/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <label>Started</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>