Sync_E-comm_to_Salesforce/force-app/main/default/objects/Stripe_Subscription__c/fields/Stripe_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_ID__c</fullName>
    <label>Stripe ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>